--- a/index.html
+++ b/index.html
@@ -24,8 +24,26 @@
                 </ul>
             </div>
         </nav>
+
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a class="btn" href="about.html">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
 
-</body>
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+            <p>Aliquam sem et tortor consequat id porta nibh. Est ullamcorper eget nulla facilisi etiam. In iaculis nunc sed augue lacus viverra vitae congue. Mi eget mauris pharetra et ultrices neque ornare. Nulla at volutpat diam ut venenatis tellus in. Diam quam nulla porttitor massa id neque aliquam. Habitasse platea dictumst quisque sagittis purus sit amet. Scelerisque purus semper eget duis at tellus at. Sollicitudin nibh sit amet commodo nulla facilisi.</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
 
+</body>
 </html>
