--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to the most extraordindary hotel in the Bronx">
     <meta name="keywords" content="hotel, bronx, new york, bronx hotel, nyc hotel">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/5a558b2295.js" crossorigin="anonymous"></script>
     <title>Lehman Hotel | Welcome</title>
 </head>
 
@@ -44,6 +45,30 @@
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
+
+    <section id="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
+        </div>
+    </section>
+
+    <div class="clr"></div>
+
+    <footer id="main-footer">
+        <p>Lehman Hotel &copy; 2019, All Rights Reserved</p>
+    </footer>
 
 </body>
 </html>
