Create Contact page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Welcome to the most extraordindary hotel in the Bronx">
     <meta name="keywords" content="hotel, bronx, new york, bronx hotel, nyc hotel">
+    <script src="https://kit.fontawesome.com/5a558b2295.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Lehman Hotel | About</title>
 </head>
@@ -46,12 +47,14 @@
             <h2 class="l-heading">What Our Guests Say</h2>
             <div class="testimonial bg-primary">
                 <img src="./img/person-1.jpg" alt="Person 1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nulla laudantium temporibus iste incidunt modi minus enim quaerat, debitis aperiam et, atque ut doloremque earum perferendis natus, quas laborum voluptas! Quibusdam laudantium ad fugiat tenetur sit maiores quos doloribus quis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nulla laudantium temporibus iste incidunt modi minus enim quaerat, debitis aperiam et, atque ut doloremque earum perferendis natus, quas laborum voluptas! Quibusdam laudantium
+                    ad fugiat tenetur sit maiores quos doloribus quis.</p>
             </div>
             <div class="testimonial bg-primary">
-                    <img src="./img/person-2.jpg" alt="Person 2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nulla laudantium temporibus iste incidunt modi minus enim quaerat, debitis aperiam et, atque ut doloremque earum perferendis natus, quas laborum voluptas! Quibusdam laudantium ad fugiat tenetur sit maiores quos doloribus quis.</p>
-                </div>
+                <img src="./img/person-2.jpg" alt="Person 2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nulla laudantium temporibus iste incidunt modi minus enim quaerat, debitis aperiam et, atque ut doloremque earum perferendis natus, quas laborum voluptas! Quibusdam laudantium
+                    ad fugiat tenetur sit maiores quos doloribus quis.</p>
+            </div>
         </div>
     </section>
 
@@ -60,4 +63,5 @@
     </footer>
 
 </body>
+
 </html>
