--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
         </div>
         <div class="box bg-primary">
-            <i class="fas fa-utensils fa-3x"></i>
-            <h3>Free Meals</h3>
+            <i class="fas fa-tree fa-3x"></i>
+            <h3>Beautiful Scenery</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
         </div>
         <div class="box bg-light">
             <i class="fas fa-dumbbell fa-3x"></i>
-            <h3>Fitness Room</h3>
+            <h3>Large Gym</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, suscipit.</p>
         </div>
     </section>
