Update contact info

--- a/contact.html
+++ b/contact.html
@@ -53,17 +53,17 @@
                 <div class="box">
                     <i class="fas fa-hotel fa-3x"></i>
                     <h3>Location</h3>
-                    <p>Bedford park</p>
+                    <p>250 Bedford Park Boulevard West Bronx, NY 10468</p>
                 </div>
                 <div class="box">
                     <i class="fas fa-phone fa-3x"></i>
                     <h3>Phone Number</h3>
-                    <p>1231231232</p>
+                    <p>(718)-960-8000</p>
                 </div>
                 <div class="box">
                     <i class="fas fa-envelope fa-3x"></i>
                     <h3>Email Address</h3>
-                    <p>something@somthing.com</p>
+                    <p>office@lehman.edu</p>
                 </div>
             </div>
         </section>
