Add icons to contact info

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to the most extraordindary hotel in the Bronx">
     <meta name="keywords" content="hotel, bronx, new york, bronx hotel, nyc hotel">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/5a558b2295.js" crossorigin="anonymous"></script>
     <title>Lehman Hotel | Contact</title>
 </head>
 
