--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to the most extraordindary hotel in the Bronx">
     <meta name="keywords" content="hotel, bronx, new york, bronx hotel, nyc hotel">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <script src="https://kit.fontawesome.com/5a558b2295.js" crossorigin="anonymous"></script>
     <title>Lehman Hotel | Welcome</title>
 </head>
