Make home info and boxes responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="showcase-content">
                     <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <a class="btn" href="about.html">About Our Hotel</a>
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
-            <p>Aliquam sem et tortor consequat id porta nibh. Est ullamcorper eget nulla facilisi etiam. In iaculis nunc sed augue lacus viverra vitae congue. Mi eget mauris pharetra et ultrices neque ornare. Nulla at volutpat diam ut venenatis tellus in. Diam quam nulla porttitor massa id neque aliquam. Habitasse platea dictumst quisque sagittis purus sit amet. Scelerisque purus semper eget duis at tellus at. Sollicitudin nibh sit amet commodo nulla facilisi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est beatae dolores tempore, esse reprehenderit natus perspiciatis ea, suscipit voluptatibus non harum perferendis itaque id. Rerum, alias dolorum qui modi culpa asperiores quia atque voluptatibus ipsa, tempore exercitationem quas, omnis itaque iure perspiciatis! Possimus asperiores esse consequatur nobis labore vitae dolorum! Dolorum nisi perspiciatis maiores eaque!</p>
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
