Make About and Contact pages responsive

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="hotel, bronx, new york, bronx hotel, nyc hotel">
     <script src="https://kit.fontawesome.com/5a558b2295.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>Lehman Hotel | About</title>
 </head>
 
