Fix minor layout issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="info-img"></div>
         <div class="info-content">
             <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est beatae dolores tempore, esse reprehenderit natus perspiciatis ea, suscipit voluptatibus non harum perferendis itaque id. Rerum, alias dolorum qui modi culpa asperiores quia atque voluptatibus ipsa, tempore exercitationem quas, omnis itaque iure perspiciatis! Possimus asperiores esse consequatur nobis labore vitae dolorum! Dolorum nisi perspiciatis maiores eaque!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est beatae dolores tempore, esse reprehenderit natus perspiciatis ea, suscipit voluptatibus non harum perferendis itaque id. Rerum, alias dolorum qui modi culpa asperiores quia atque voluptatibus ipsa, tempore exercitationem quas, omnis itaque iure perspiciatis! Possimus asperiores esse consequatur nobis labore vitae dolorum!</p>
             <a href="about.html" class="btn btn-light">Read More</a>
         </div>
     </section>
